syntax = "proto3";

package loggrebutterfly;

service DataNode {
  rpc Write(stream WriteInfo) returns (WriteResponse) {}
  rpc Read(ReadInfo) returns (stream ReadData) {}
}

message WriteInfo {
  bytes Payload = 1;
}

message WriteResponse {
}

message ReadInfo {
  string name = 1;
}

message ReadData {
  bytes Payload = 1;
}

